patch API + maj de la doc
